[gd_scene load_steps=5 format=3 uid="uid://dhv82j4g86uar"]

[ext_resource type="Texture2D" uid="uid://h7ukgyu3bbkg" path="res://assets/PNG/Default size/towerDefense_tile250.png" id="1_5pk7m"]
[ext_resource type="Script" path="res://Turrets/BasicTurret.gd" id="1_qlewl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yi8sg"]
size = Vector2(90, 90)

[sub_resource type="CircleShape2D" id="CircleShape2D_1x1dg"]
radius = 262.008

[node name="BasicTurret" type="StaticBody2D"]
script = ExtResource("1_qlewl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-15, 0)
shape = SubResource("RectangleShape2D_yi8sg")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1x1dg")

[node name="TowerDefenseTile250" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("1_5pk7m")

[node name="BulletContainer" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(57, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
